# elimination_engine_rust

./: Cargo.toml
bmp_reader/: Cargo.toml
bmp_reader/src/: lib.rs
komrend/: Cargo.toml
komrend/src/: lib.rs
resources/shaders/: default.fs
src/: main.rs
